Added customisable CloudFormation stack name

--- a/Taskfile.env
+++ b/Taskfile.env
@@ -1,3 +1,6 @@
+# Name of the CloudFormation Stack to deploy.
+CLOUDFORMATION_STACK_NAME="cloudformation-custom-resource-terraform"
+
 # S3 bucket used to store CloudFormation template and lambda code for deployment.
 CLOUDFORMATION_DEPLOYMENT_S3_BUCKET="your-bucket-for-cloudformation-deployment-artifacts"
 
